@@ -5,38 +5,30 @@
  * terms of the Eclipse Public License v1.0 which accompanies this distribution,
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
-
 package org.opendaylight.protocol.bgp.openconfig.spi;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.verify;
 
-import java.util.Collections;
-import org.junit.Before;
+import java.util.List;
 import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.MockitoJUnitRunner;
 
+@RunWith(MockitoJUnitRunner.StrictStubs.class)
 public class SimpleBGPTableTypeRegistryProviderActivatorTest {
-
     @Mock
     private BGPTableTypeRegistryProviderActivator providerActivator;
 
-    @Before
-    public void setUp() {
-        MockitoAnnotations.initMocks(this);
-    }
-
     @Test
     public void testSimpleBGPTableTypeRegistryProviderActivator() {
-        final SimpleBGPTableTypeRegistryProvider provider = new SimpleBGPTableTypeRegistryProvider();
-        final SimpleBGPTableTypeRegistryProviderActivator activator =
-                new SimpleBGPTableTypeRegistryProviderActivator(provider,
-                        Collections.singletonList(this.providerActivator));
-        activator.start();
-        verify(this.providerActivator).startBGPTableTypeRegistryProvider(Mockito.any());
-        activator.close();
-        verify(this.providerActivator).stopBGPTableTypeRegistryProvider();
-    }
+        doReturn(List.of()).when(providerActivator)
+            .startBGPTableTypeRegistryProvider(any(BGPTableTypeRegistryProvider.class));
 
+        final DefaultBGPTableTypeRegistryProvider provider = new DefaultBGPTableTypeRegistryProvider(
+            List.of(providerActivator));
+        verify(providerActivator).startBGPTableTypeRegistryProvider(provider);
+    }
 }
